<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_small">

    <ImageView
        android:id="@+id/shop_item_icon"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/friend_avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/shop_item_info"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/shop_item_info"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="9"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/shop_item_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/shop_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/shop_item_summary"
            />
        <TextView
            android:id="@+id/shop_item_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
            app:layout_constraintTop_toBottomOf="@id/shop_item_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/shop_item_buy_btn"
            android:text="@string/friend_summary"/>
        <Button
            android:id="@+id/shop_item_buy_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle2"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/shop_item_summary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/shopping_buy"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
