<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.monapizza.monapizza.ui.WelcomeActivity">

    <!--
    <ImageView
        android:id="@+id/welcome_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_guideline"/>
        -->
    <TextView
        android:id="@+id/welcome_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_logo"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:elevation="0px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_guideline"/>

    <android.support.constraint.Guideline
        android:id="@+id/welcome_guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <Button
        android:id="@+id/welcome_guest_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_guest_login_button"
        style="@style/ButtonStyle2"
        android:minWidth="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_guideline"/>

    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login_button"
        style="@style/ButtonStyle2"
        android:minWidth="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_guest_login_button"/>

    <Button
        android:id="@+id/welcome_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_signup_button"
        style="@style/ButtonStyle2"
        android:minWidth="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_login_button"/>
</android.support.constraint.ConstraintLayout>
