<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.monapizza.monapizza.ui.AccountManagerActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/account_manager_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/Widget.AppCompat.ActionBar.TabBar"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lectures_list">
        <android.support.v7.widget.Toolbar
            android:id="@+id/account_manager_toolbar"
            android:minHeight="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_width="match_parent"/>
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/account_manager_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_action_account_circle"
        android:layout_margin="@dimen/padding_small"
        android:padding="@dimen/padding_small"
        app:layout_constraintTop_toBottomOf="@id/account_manager_appbar_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TableLayout
        android:id="@+id/account_manager_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_margin="@dimen/padding_small"
        app:layout_constraintTop_toBottomOf="@id/account_manager_avatar"
        android:shrinkColumns="*"
        android:stretchColumns="*">
        <TableRow
            android:padding="@dimen/padding_small">
            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/account_username"/>
            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/account_manager_username"/>
        </TableRow>
        <TableRow
            android:padding="@dimen/padding_small">
            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/account_email"/>
            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/account_manager_email"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/account_manager_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle2"
        android:text="@string/account_manager_edit_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_manager_info"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/account_manager_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_manager_avatar"
        android:visibility="gone">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_manager_pass_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_password"
            style="@style/TextInputLayoutStyle"
            app:passwordToggleEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_manager_password_textInputEditText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_manager_repass_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_repassword"
            style="@style/TextInputLayoutStyle"
            app:passwordToggleEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_manager_pass_textInputLayout">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_manager_repassword_textInputEditText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/account_manager_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle2"
            android:text="@string/account_manager_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/account_manager_finish_edit_button"
            app:layout_constraintTop_toBottomOf="@id/account_manager_repass_textInputLayout"/>

        <Button
            android:id="@+id/account_manager_finish_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle2"
            android:text="@string/account_manager_finish_button"
            app:layout_constraintLeft_toRightOf="@id/account_manager_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_manager_repass_textInputLayout"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
