<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_small"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        android:layout_margin="@dimen/padding_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small">
            <TextView
                android:id="@+id/lesson_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="@dimen/padding_small"
                android:padding="@dimen/padding_small"
                android:text="@string/lessons_title"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/lesson_words"
                android:layout_width="wrap_content"
                android:maxWidth="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lesson_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/lesson_start_button"
                android:layout_margin="@dimen/padding_small"
                android:padding="@dimen/padding_small"
                android:text="@string/lessons_words"
                android:ellipsize="end"
                android:textSize="@dimen/text_size_subheading"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/lesson_start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_margin="@dimen/padding_small"
                android:background="@drawable/round_corner_button_2"
                android:minWidth="100dp"
                app:layout_constraintTop_toBottomOf="@id/lesson_words"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/lessons_start_button"
                android:textAlignment="center"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>