<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.monapizza.monapizza.ui.SignupActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/signup_toolbar"
        android:minHeight="?android:attr/actionBarSize"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_width="match_parent">
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/signup_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_guideline"/>
    <!--
    <TextView
        android:id="@+id/welcome_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_logo"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:elevation="0px"
        app:layout_constraintTop_toTopOf="@id/signup_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_username_textInputLayout"/>
    -->

    <android.support.constraint.Guideline
        android:id="@+id/signup_guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_margin="@dimen/padding_small"
        app:layout_constraintGuide_percent=".45"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_username_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_username"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_guideline">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_username_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:nextFocusForward="@id/signup_password_textInputEditText"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_pass_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_password"
        style="@style/TextInputLayoutStyle"
        app:passwordToggleEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_username_textInputLayout">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_password_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:nextFocusForward="@id/signup_repassword_textInputEditText"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_repass_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_repassword"
        style="@style/TextInputLayoutStyle"
        app:passwordToggleEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_pass_textInputLayout">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_repassword_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signup_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle2"
        android:minWidth="200dp"
        android:text="@string/welcome_signup_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_repass_textInputLayout"/>

</android.support.constraint.ConstraintLayout>
